# CompileTests

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
src/: foo.cpp
src/bots/: bot.cpp  bot.h
src/server/: server.cpp  server.h
